Changelog for GoodNews

GoodNews 1.1.5-pl (2014-07-25)
--------------------------------------------------

- additional CSS fixes (because of last minute changes in Revo 2.3)
- small corrections/changes in lexicon strings
- changed Auto-Refresh toggle to ExtJs Cycle element for better UX
- other small cosmetical changes to match new Revo 2.3 manager skin
- removed Cron trigger status field (and make worker_process_active == true by default)


GoodNews 1.1.4-pl (2014-07-20)
--------------------------------------------------

- [#12] You have changes pending; are you sure you want to cancel?
- added contentblocks_replacement class to make GoodNews compatible with ContentBlocks 1.1


GoodNews 1.1.3-pl (2014-07-17)
--------------------------------------------------

- removed version_compare JS plugin and all it's references
- implemented a legacyMode flag for detecting older MODX versions (< 2.3)


GoodNews 1.1.2-pl (2014-07-14)
--------------------------------------------------

- fixed some installation issues (missing or wrong default settings, default container template)
- changed default bounce handling settings to more secure values


GoodNews 1.1.1-pl (2014-07-09)
--------------------------------------------------

- added SB + HB column to Subscribers grid
- fixed deleteSubscribers + updateSubscribers methods (also added groupmember and sudo check!)


GoodNews 1.1.0-pl (2014-07-09)
--------------------------------------------------

- added automatic bounce handling (parsing bounced emails and automatically handle subscriber status)
- moved all protected container settings into GoodNews system settings
- added system check for PHP Imap extension
- added auto-cleanup of susbcriptions (remove never activated accounts)
- added ID column to Subscribers grid


GoodNews 1.0.4-pl (2014-06-16)
--------------------------------------------------

- [#11] Compatibility problems with Revolution >= 2.3


GoodNews 1.0.3-pl (2014-06-10)