@@ -67,7 +67,7 @@ $_lang['goodnews.mail_options']                            = 'Mail Optionen';
 $_lang['goodnews.mail_sending_scheduled']                  = 'Geplanter Versand';
 $_lang['goodnews.mail_sending_scheduled_desc']             = 'Legen Sie einen zukünftigen Zeitpunkt fest, an dem das Mailing automatisch versended werden soll.';
 $_lang['goodnews.mail_send_to']                            = 'Senden an';
-$_lang['goodnews.mail_groups_categories']                  = 'Mailing Gruppen und Kategorien';
+$_lang['goodnews.mail_groups_categories']                  = 'Gruppen und Kategorien';
 $_lang['goodnews.mail_template']                           = 'Mail Template';
 $_lang['goodnews.mail_template_desc']                      = 'Das Template für dieses Mail';
 $_lang['goodnews.mail_format']                             = 'Mail Format';
