@@ -67,7 +67,7 @@ $_lang['goodnews.mail_sending_scheduled']                  = 'Scheduled Sending'
 $_lang['goodnews.mail_sending_scheduled_desc']             = 'Specify a future time, the mailing should be sent automatically.';
 $_lang['goodnews.mail_options']                            = 'Mail Options';
 $_lang['goodnews.mail_send_to']                            = 'Send to';
-$_lang['goodnews.mail_groups_categories']                  = 'Mailing Groups and Categories';
+$_lang['goodnews.mail_groups_categories']                  = 'Groups and Categories';
 $_lang['goodnews.mail_template']                           = 'Mail Template';
 $_lang['goodnews.mail_template_desc']                      = 'The template for this mail.';
 $_lang['goodnews.mail_format']                             = 'Mail Format';
